2008-10-19  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (minibuffer-default-add-shell-commands): Doc fix.

2008-10-19  Martin Rudalics  <rudalics@gmx.at>

	* window.el (enlarge-window-horizontally, shrink-window-horizontally):
	Make argument names follow Elisp manual.

2008-10-19  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/remember.el (remember-data-file):
	* shadowfile.el (shadow-initialize)
	<shadow-info-file, shadow-todo-file>:
	* savehist.el (savehist-file):
	* recentf.el (recentf-save-file):
	* pcvs-defs.el (cvs-cvsrc-file):
	* international/kkc.el (kkc-init-file-name):
	* ido.el (ido-save-directory-list-file):
	* calendar/todo-mode.el (todo-file-do, todo-file-done)
	(todo-file-top): Run file names that begin with a period thru
	`convert-standard-filename'.

	* dos-fns.el (dos-reevaluate-defcustoms): New function.  Add it to
	before-init-hook.

	Fix Bug #1183:

	* ediff-diff.el (ediff-exec-process): For buffer jobs, bind
	coding-system-for-read to ediff-coding-system-for-write.

	* ediff-util.el (ediff-make-temp-file): Unconditionally bind
	coding-system-for-write to ediff-coding-system-for-write.

	* ediff-init.el (ediff-coding-system-for-read): Doc fix.
	(ediff-coding-system-for-write): Set to emacs-internal.

2008-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-conf.el (emacs-internal): New coding system alias.

2008-10-18  Juri Linkov  <juri@jurta.org>

	* info.el (Info-file-supports-index-cookies-list): New variable.
	(Info-file-supports-index-cookies): New function.
	(Info-find-node-2, Info-index-nodes, Info-index-node): Use it.
	(Info-index-nodes): Let-bind Info-point-loc to nil for files
	without an index cookie to ignore it when Info-index-nodes is
	called during navigating from an index node with line numbers.
	(Info-index-node): Set file to Info-current-file if nil.  (Bug#1118)

	* info.el (Info-breadcrumbs-depth): Move defcustom higher to the
	variable definition section.
