@@ -1,5 +1,7 @@
 2008-10-19  Eli Zaretskii  <eliz@gnu.org>
 
+	* subr.el (apply-partially): Moved here from minibuffer.el.  Doc fix.
+
 	* simple.el (minibuffer-default-add-shell-commands): Doc fix.
 
 2008-10-19  Martin Rudalics  <rudalics@gmx.at>
